samples/_failures_safe/1761428075_8d7c4a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_aa517c96.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_aa517c96.c:183:5: error: expected expression at end of input
  183 |     for (int count =
      |     ^~~
./samples/SAFE/__tmp_aa517c96.c:183:5: error: expected declaration or statement at end of input
